@@ -273,14 +273,12 @@ int chown_all(dbref from_player, dbref to_player, dbref acting_player, int key)
         int quota_out = 0;
         int quota_in  = 0;
 
-        FLAG clearflag1 = 0;
-        FLAG setflag1 = 0;
         bool bClearPowers = true;
 
         // Always strip CHOWN_OK and set HALT.
         //
-        clearflag1 |= CHOWN_OK|WIZARD|ROYALTY|INHERIT;
-        setflag1   |= HALT;
+        FLAG clearflag1 = CHOWN_OK | mudconf.stripped_flags.word[FLAG_WORD1];
+        FLAG setflag1   = HALT;
         if (key & CHOWN_NOSTRIP)
         {
             // Don't strip ROYALTY or INHERIT if /nostrip is used.
@@ -349,8 +347,10 @@ int chown_all(dbref from_player, dbref to_player, dbref acting_player, int key)
                     s_Powers(i, 0);
                     s_Powers2(i, 0);
                 }
-                db[i].fs.word[FLAG_WORD1] &= ~clearflag1;
-                db[i].fs.word[FLAG_WORD1] |= setflag1;
+
+                s_Flags(i, FLAG_WORD1, (Flags(i) & ~clearflag1) | setflag1);
+                s_Flags(i, FLAG_WORD2, Flags2(i) & mudconf.stripped_flags.word[FLAG_WORD2]);
+                s_Flags(i, FLAG_WORD3, Flags3(i) & mudconf.stripped_flags.word[FLAG_WORD3]);
 
                 // Always halt the queue.
                 //
@@ -418,7 +418,7 @@ void do_chownall
     }
 }
 
-#define ANY_OWNER -2
+#define ANY_OWNER (-2)
 
 static void er_mark_disabled(dbref player)
 {
